syntax = "proto3";
option go_package = "github.com/eugenshima/profile";

message Profile {
    string ID = 1;
    string Login = 2;
    bytes Password = 3;
    string RefreshToken = 4;
    string Username = 5;
}

message CreateProfile {
    string Login = 1;
    bytes Password = 2;
    string Username = 3;
}

message Auth {
    string Login = 1;
    bytes Password = 2;
}


service Profiles {
    rpc GetProfileByID(GetProfileByIDRequest) returns (GetProfileByIDResponse);
    rpc CreateNewProfile(CreateNewProfileRequest) returns (CreateNewProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc DeleteProfileByID(DeleteProfileByIDRequest) returns (DeleteProfileByIDResponse);
}

message LoginRequest {
    Auth Auth = 1;
}

message LoginResponse {
    string ID = 1;
}

message CreateNewProfileRequest {
    CreateProfile Profile = 1;
}

message CreateNewProfileResponse {}

message GetProfileByIDRequest {
    string ID = 1;
}

message GetProfileByIDResponse {
    Profile profile = 1;
}

message UpdateProfileRequest {
    string ID = 1;
    bytes RefreshToken = 2;
}

message UpdateProfileResponse {}

message DeleteProfileByIDRequest {
    string ID = 1;
}

message DeleteProfileByIDResponse {}